Fix layout issues and rerender issues

--- a/modules/rooms/styles/room-card.css
+++ b/modules/rooms/styles/room-card.css
@@ -1,8 +1,8 @@
 .room-card {
   background-color: var(--primary);
   color: white;
-  width: 250px;
   height: 150px;
+  width: 250px;
   padding: 1rem;
   border-radius: 12px;
   cursor: pointer;
@@ -16,8 +16,9 @@
 
 .room-container {
   margin-top: 0.5rem;
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, 250px);
+  gap: 2rem;
 }
 
 .room-card-profile-images {
